--- a/pages/about us.html
+++ b/pages/about us.html
@@ -15,12 +15,12 @@
       </div>
       <div class="links">
         <a href="../index.html">Home</a>
-        <a href="./pages/about us.html">About Us</a>
-        <a href="./pages/menu.html">Menu</a>
-        <a href="./pages/gallerry.html">Gallery</a>
-        <a href="./pages/blog.html">Blog</a>
-        <a href="./pages/contact.html">Contact Us</a>
-        <a href="./pages/customer order.html">Customer Order</a>
+        <a href="./about us.html">About Us</a>
+        <a href="./menu.html">Menu</a>
+        <a href="./gallerry.html">Gallery</a>
+        <a href="./blog.html">Blog</a>
+        <a href="./contact.html">Contact Us</a>
+        <a href="./customer order.html">Customer Order</a>
       </div>
       <div class="srch">
         <div class="holder">
