--- a/pages/menu.html
+++ b/pages/menu.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Playwrite+AU+NSW:wght@100..400&family=Tangerine:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Tangerine:wght@400;700&display=swap"
       rel="stylesheet"
@@ -41,7 +47,7 @@
     </nav>
 
     <div class="main">
-      <div class="menu">
+      <!-- <div class="menu">
         <div class="img"></div>
         <div class="info">
           <h3>Eru & Waterfufu</h3>
@@ -55,28 +61,85 @@
           <h3>Eru & Waterfufu</h3>
           <p>Price: 15$</p>
         </div>
-      </div>
+      </div> -->
 
-      <div class="menu">
-        <div class="img"></div>
-        <div class="info">
-          <h3>Eru & Waterfufu</h3>
-          <p>Price: 15$</p>
+      <div class="menu2">
+        <div class="part1">
+          <div class="img">
+            <img src="../assets/pic5.jpg" alt="" />
+          </div>
+          <div class="dtl">
+            <h2>Eru & WaterFufu</h2>
+            <span>Cooked By Our chief of chefs</span>
+            <span>Price: <b>$15</b></span>
+            <span></span>
+          </div>
+        </div>
+        <div class="part1">
+          <div class="img">
+            <img src="../assets/pic5.jpg" alt="" />
+          </div>
+          <div class="dtl">
+            <h2>Eru & WaterFufu</h2>
+            <span>Cooked By Our chief of chefs</span>
+            <span>Price: <b>$15</b></span>
+            <span></span>
+          </div>
         </div>
       </div>
 
-      <div class="menu">
-        <div class="img"></div>
-        <div class="info">
-          <h3>Eru & Waterfufu</h3>
-          <p>Price: 15$</p>
+      <div class="menu2">
+        <div class="part1">
+          <div class="img">
+            <img src="../assets/pic5.jpg" alt="" />
+          </div>
+          <div class="dtl">
+            <h2>Eru & WaterFufu</h2>
+            <span>Cooked By Our chief of chefs</span>
+            <span>Price: <b>$15</b></span>
+            <span></span>
+          </div>
+        </div>
+        <div class="part1">
+          <div class="img">
+            <img src="../assets/pic5.jpg" alt="" />
+          </div>
+          <div class="dtl">
+            <h2>Eru & WaterFufu</h2>
+            <span>Cooked By Our chief of chefs</span>
+            <span>Price: <b>$15</b></span>
+            <span></span>
+          </div>
         </div>
       </div>
 
-      <div class="menu">
-      
+      <div class="menu2">
+        <div class="part1">
+          <div class="img">
+            <img src="../assets/pic5.jpg" alt="" />
+          </div>
+          <div class="dtl">
+            <h2>Eru & WaterFufu</h2>
+            <span>Cooked By Our chief of chefs</span>
+            <span>Price: <b>$15</b></span>
+            <span></span>
+          </div>
+        </div>
+        <div class="part1">
+          <div class="img">
+            <img src="../assets/pic5.jpg" alt="" />
+          </div>
+          <div class="dtl">
+            <h2>Eru & WaterFufu</h2>
+            <span>Cooked By Our chief of chefs</span>
+            <span>Price: <b>$15</b></span>
+            <span></span>
+          </div>
+        </div>
+      </div>
     </div>
 
+    <p>bkhgdvcbdhcvdnvchdvmcmvvmvvvds bvmcncdnvhd bcnvc bchvdc b  kj jdshvbdvdshmvdshkv</p>
     <footer>JIC Events &copy; 2025 | All rights reserved</footer>
   </body>
 </html>
