--- a/pages/gallerry.html
+++ b/pages/gallerry.html
@@ -34,5 +34,13 @@
       </div>
     </nav>
 
+    <div class="main">
+        <div class="img"></div>
+        <div class="img"></div>
+        <div class="img"></div>
+        <div class="img"></div>
+    </div>
+    <p>asdfghjkl;lkjhgfddfghjkl;kjfdsdfgnm..,mnvcdfghjkl;lkjhgfdsdfghjkjhgfdsasdfghjkjhgfdsa</p>
+
 </body>
 </html>
