--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <a href="./pages/gallerry.html">Gallery</a>
         <a href="./pages/blog.html">Blog</a>
         <a href="./pages/contact.html">Contact Us</a>
-        <a href="./pages/customer order.html">Customer Order</a>
+        <a href="./pages/customer_order.html">Customer Order</a>
       </div>
       <div class="srch">
         <div class="holder">
