--- a/pages/custom_order.html
+++ b/pages/custom_order.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./gallerry.css">
-    <title>JIC | Gallery</title>
+    <link rel="stylesheet" href="./order.css">
+    <title>Document</title>
 </head>
 <body>
     <nav>
@@ -19,7 +19,7 @@
         <a href="./gallerry.html">Gallery</a>
         <a href="./blog.html">Blog</a>
         <a href="./contact.html">Contact Us</a>
-        <a href="./customer_order.html">Customer Order</a>
+        <a href="./customer order.html">Customer Order</a>
       </div>
       <div class="srch">
         <div class="holder">
@@ -34,13 +34,17 @@
       </div>
     </nav>
 
-    <div class="main">
-        <div class="img"></div>
-        <div class="img"></div>
-        <div class="img"></div>
-        <div class="img"></div>
-    </div>
-    <p>asdfghjkl;lkjhgfddfghjkl;kjfdsdfgnm..,mnvcdfghjkl;lkjhgfdsdfghjkjhgfdsasdfghjkjhgfdsa</p>
-
+    <form action="" method="post">
+        <input type="text" placeholder="Name" required>
+        <input type="tel" placeholder="Number" required>
+        <input type="date" placeholder="Date" required>
+        <select name="package_option" id="" required>
+            <option value=""></option>
+            <option value="eru">Eru & Waterfufu</option>
+            <option value="eru">Eru & Waterfufu</option>
+            <option value="eru">Eru & Waterfufu</option>
+        </select>
+        <!-- <input type="text"> -->
+    </form>
 </body>
 </html>
