--- a/pages/custom_order.html
+++ b/pages/custom_order.html
@@ -19,7 +19,7 @@
         <a href="./gallerry.html">Gallery</a>
         <a href="./blog.html">Blog</a>
         <a href="./contact.html">Contact Us</a>
-        <a href="./customer order.html">Customer Order</a>
+        <a href="./custom_order.html">Customer Order</a>
       </div>
       <div class="srch">
         <div class="holder">
