--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a href="./pages/menu.html">Menu</a>
         <a href="./pages/gallerry.html">Gallery</a>
         <a href="./pages/blog.html">Blog</a>
-        <a href="./pages/contact.html">Contact Us</a>
+        <a href="./pages/contact us.html">Contact Us</a>
         <a href="./pages/custom_order.html">Customer Order</a>
       </div>
       <div class="srch">
