--- a/pages/about us.html
+++ b/pages/about us.html
@@ -19,7 +19,7 @@
         <a href="./menu.html">Menu</a>
         <a href="./gallerry.html">Gallery</a>
         <a href="./blog.html">Blog</a>
-        <a href="./contact.html">Contact Us</a>
+        <a href="./contact us.html">Contact Us</a>
         <a href="./custom_order.html">Customer Order</a>
       </div>
       <div class="srch">
