--- a/pages/custom_order.html
+++ b/pages/custom_order.html
@@ -45,6 +45,8 @@
             <option value="eru">Eru & Waterfufu</option>
         </select>
         <!-- <input type="text"> -->
+
+        <button type="submit">Order</button>
     </form>
 </body>
 </html>
