--- a/pages/custom_order.html
+++ b/pages/custom_order.html
@@ -35,14 +35,14 @@
     </nav>
 
     <form action="" method="post">
-        <input type="text" placeholder="Name" required>
-        <input type="tel" placeholder="Number" required>
+        <input type="text" placeholder="Name" minlength="3" maxlength="120" required>
+        <input type="number" placeholder="Number" min="9" required>
         <input type="date" placeholder="Date" required>
         <select name="package_option" id="" required>
             <option value=""></option>
             <option value="eru">Eru & Waterfufu</option>
-            <option value="eru">Eru & Waterfufu</option>
-            <option value="eru">Eru & Waterfufu</option>
+            <option value="achu">Achu</option>
+            <option value="beans">Rice & beans</option>
         </select>
         <!-- <input type="text"> -->
 
