--- a/pages/blog.html
+++ b/pages/blog.html
@@ -33,5 +33,16 @@
         <span></span>
       </div>
     </nav>
+    <div class="main">
+        <h2> Welcome to JIC EVENTS</h2>
+
+<p>At JIC EVENTS, we're passionate about creating unforgettable experiences that bring people together. Our team of experts is dedicated to delivering exceptional catering and event planning services that exceed your expectations. With years of experience in the industry, we've honed our skills in crafting unique and memorable events that reflect our clients' personalities and styles.</p>
+
+        <p>Whether you're planning a wedding, corporate event, or private party, we have the expertise and resources to make it a success. From menu planning to decor and logistics, we handle every detail with care and precision. Our goal is to create a seamless and stress-free experience for you and your guests.</p>
+
+        <p>At JIC EVENTS, we believe that every event should be a reflection of your vision and style. That's why we work closely with you to understand your needs and preferences, ensuring that every aspect of your event is tailored to your unique requirements. Our commitment to excellence and attention to detail sets us apart in the industry.</p>
+
+        <p>Explore our website to learn more about our services, view our portfolio, and read testimonials from our satisfied clients. We look forward to the opportunity to work with you and create an unforgettable event that you and your guests will cherish for years to come.</p>
+    </div>
 </body>
 </html>
